# RustGtkApp

./: Cargo.toml
data/: convert.py  glade_big_character_display.glade  hsk-1-updated.json  hsk-1.json  hsk-2-updated.json  hsk-3-updated.json  hsk-4-updated.json  hsk-5-updated.json  hsk-6-updated.json
src/: csv_reading_and_writing.rs  gtk_operations.rs  gtk_utils.rs  main.rs  voc_notebook.rs  voc_treeview.rs  vocabulary.rs  vocabulary_test.rs
src/include/: mod.rs  voc_big_character_box.rs  voc_notebook.rs  voc_status_message.rs  voc_statusbar.rs  voc_textview.rs  voc_treeview.rs  vocabulary.rs
