[package]
name = "vocabulary_trainer"
version = "0.1.0"
authors = ["Zelphir Kaltstahl <zelphirkaltstahl@gmail.com>"]

[dependencies]
pango = "0.8.0"
csv = "1.1.3"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
rustc-serialize = "^0.3.24"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]
